@@ -2,6 +2,7 @@ package com.dmdirc.ktirc.events
 
 import com.dmdirc.ktirc.IrcClient
 
+@FunctionalInterface
 interface EventHandler {
 
     suspend fun processEvent(client: IrcClient, event: IrcEvent)
